--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "@types/react": "18.2.5",
+    "@types/react-dom": "18.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
